fix pf-title off-center at 2/3 width

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -810,6 +810,7 @@ textarea {
 }
 
 .pfblock-title{
+	margin-top:40px;
     font-weight: 800;
 }
 
